fix entrypoint